--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
         "watch": "rollup -c -w"
     },
     "devDependencies": {
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-preset-env": "^1.7.0",
-        "babel-register": "^6.26.0",
-        "prettier": "^1.18.2",
-        "rollup": "^1.26.0",
-        "rollup-plugin-babel": "^3.0.7",
+        "@babel/core": "^7.4.5",
+        "@babel/preset-env": "^7.4.5",
+        "@babel/register": "^7.4.5",
+        "prettier": "^1.19.1",
+        "rollup": "^1.29.0",
+        "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-resolve": "^5.2.0"
