add more roxygen!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,10 @@ Version: 0.1.0
 Authors@R: c(
 	person("Billy", "Burns", email = "jwildfire@gmail.com", role = c("cre","aut")))
 Maintainer: Jeremy Wildfire <jwildfire@gmail.com>
-Description: Shiny app showing Volcano Plot for clinical trial adverse events.
+Description: Shiny app of Interactive Creatinine Scatterplot for Exploring Kidney Function Data in Clinical Trials
+URL: https://github.com/SafetyGraphics/nep-explorer
+BugReports: https://github.com/SafetyGraphics/nep-explorer/issues
+Depends: R (>= 4.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -16,9 +19,11 @@ Imports:
     ggplot2,
     RColorBrewer, 
     magrittr,
-    plotly,
+    plotly (>= 4.0.0),
     gt,
-    htmlwidgets
+    htmlwidgets,
+    scales,
+    rlang
 Suggests:
     safetyGraphics, 
     safetyData
