--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,16 @@ import(RColorBrewer)
 import(dplyr)
 import(ggplot2)
 import(gt)
-import(htmlwidgets)
-import(plotly)
 import(shiny)
-import(tidyverse)
+importFrom(gt,gt_output)
+importFrom(gt,render_gt)
+importFrom(htmlwidgets,onRender)
+importFrom(magrittr,"%>%")
+importFrom(plotly,config)
+importFrom(plotly,event_data)
+importFrom(plotly,event_register)
+importFrom(plotly,ggplotly)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
+importFrom(rlang,.data)
+importFrom(scales,percent_format)
