--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: nepExplorer
 Type: Package
-Title: Interactive Graphic for Exploring Kidney Function Data in Clinical Trials
+Title: Interactive Graphic for Exploring Kidney Function Data in Clinical Trials.\
 Version: 0.1.0
 Authors@R: c(
 	person("Billy", "Burns", email = "jwildfire@gmail.com", role = c("cre","aut")))
 Maintainer: Jeremy Wildfire <jwildfire@gmail.com>
-Description: Shiny app of Interactive Creatinine Scatterplot for Exploring Kidney Function Data in Clinical Trials
+Description: Shiny app of interactive creatinine scatterplot for exploring kidney function data in clinical trials.
 URL: https://github.com/SafetyGraphics/nep-explorer
 BugReports: https://github.com/SafetyGraphics/nep-explorer/issues
 Depends: R (>= 4.0)
