replace rest of global references

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ importFrom(plotly,event_register)
 importFrom(plotly,ggplotly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(scales,percent_format)
