add animation with support for study day and visit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,12 @@ import(dplyr)
 import(ggplot2)
 import(gt)
 import(shiny)
+import(shinyjs)
 importFrom(gt,gt_output)
 importFrom(gt,render_gt)
 importFrom(htmlwidgets,onRender)
 importFrom(magrittr,"%>%")
+importFrom(plotly,animation_opts)
 importFrom(plotly,config)
 importFrom(plotly,event_data)
 importFrom(plotly,event_register)
