final clean up (hopefully)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ import(dplyr)
 import(ggplot2)
 import(gt)
 import(shiny)
-import(shinyjs)
 importFrom(gt,gt_output)
 importFrom(gt,render_gt)
 importFrom(htmlwidgets,onRender)
@@ -23,3 +22,7 @@ importFrom(plotly,renderPlotly)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(scales,percent_format)
+importFrom(shinyjs,hidden)
+importFrom(shinyjs,hide)
+importFrom(shinyjs,show)
+importFrom(shinyjs,useShinyjs)
