add code for updating patient id input for SG #99

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,5 +25,6 @@ importFrom(rlang,.data)
 importFrom(scales,percent_format)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,hide)
+importFrom(shinyjs,runjs)
 importFrom(shinyjs,show)
 importFrom(shinyjs,useShinyjs)
