First Draft of working init function included in standalone and integrated into ISG. - pending patient profile lab tests mapping - investigation into animation related obs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(create_nepexplorer_app)
 export(creatinine_data_fcn)
+export(init_nepExplorer)
 export(nepexplorer_server)
 export(nepexplorer_ui)
 import(RColorBrewer)
