fix: patient_profile_mod.R,line=148,col=2,[trailing_blank_lines_linter] added Missing terminal newline patient_profile_charts.R: added importFrom grDevices colorRampPalette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,14 +20,15 @@ Imports:
     shiny,
     dplyr,
     ggplot2,
-    RColorBrewer, 
+    RColorBrewer,
     magrittr,
     plotly (>= 4.0.0),
     gt,
     htmlwidgets,
     scales,
     rlang,
-    shinyjs
+    shinyjs,
+    grDevices
 Suggests:
     safetyGraphics, 
     safetyData
