--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(dplyr)
 import(ggplot2)
 import(gt)
 import(shiny)
+importFrom(grDevices,colorRampPalette)
 importFrom(gt,gt_output)
 importFrom(gt,render_gt)
 importFrom(htmlwidgets,onRender)
