only use generator if more than 19 labs selected for fold change chart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(plotly,renderPlotly)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(scales,percent_format)
+importFrom(shinyWidgets,pickerInput)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,hide)
 importFrom(shinyjs,show)
