clean up and make profiles same width and x-axis range #156

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(plotly,config)
 importFrom(plotly,event_data)
 importFrom(plotly,event_register)
 importFrom(plotly,ggplotly)
+importFrom(plotly,layout)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
 importFrom(rlang,":=")
